fix test for new name

--- a/tests/index.html
+++ b/tests/index.html
@@ -9,10 +9,10 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="../dist/command-palette.min.css">
+        <link rel="stylesheet" href="../dist/palette-command.min.css">
     </head>
     <body>
-        <script src="../dist/command-palette.min.js"></script>
+        <script src="../dist/palette-command.min.js"></script>
         <script src="tests.js"></script>
     </body>
 </html>
